--- a/UberDensityBasedClusteringAnalysis.ipynb
+++ b/UberDensityBasedClusteringAnalysis.ipynb
@@ -1161,36 +1161,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"700\"\n",
-       "            height=\"600\"\n",
-       "            src=\"_map.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1a22bbdac8>"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "from IPython.display import IFrame\n",
-    "#display(HTML(filename='_map.html'))\n",
-    "IFrame(src='_map.html', width=700, height=600)"
+    "Conclusion"
    ]
   },
   {
